--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -1,17 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>TechCon 2024 </title>
+  <title>TechCon 2024 — Home</title>
   <meta name="description" content="Official website for TechCon 2024 — schedule, speakers, registration, and contact information." />
 </head>
 <body>
   <!-- Header: conference name + primary navigation -->
   <header>
-    <h1>TechConf 2024</h1>
+    <h1>TechCon 2024</h1>
     <nav aria-label="Primary">
       <ul>
+        <li><a href="index.html" aria-current="page">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="schedule.html">Schedule</a></li>
         <li><a href="register.html">Register</a></li>
@@ -20,7 +21,7 @@
     </nav>
   </header>
 
-  <!-- Main content: intro section + accessible promo video -->
+  <!-- Main content: intro section + accessible promo video (YouTube) -->
   <main>
     <section aria-labelledby="intro">
       <h2 id="intro">Welcome to TechCon 2024</h2>
@@ -30,27 +31,22 @@
       </p>
 
       <figure>
-        <video
-          controls
-          preload="metadata"
+        <!-- YouTube embed: replace the video ID if needed -->
+        <iframe
           width="800"
-          style="max-width:100%; height:auto;"
-          poster="promo-poster.jpg"
-          aria-describedby="promo-desc"
-        >
-          <!-- Replace with your real video source -->
-          <source src="promo.mp4" type="video/mp4" />
-          <!-- Subtitles/captions file (WebVTT). Provide a real .vtt file if available. -->
-          <track kind="subtitles" src="promo.en.vtt" srclang="en" label="English" default />
-          <!-- Fallback text for very old browsers -->
-          Your browser does not support the video tag.
-        </video>
-        <figcaption id="promo-desc">Promo video: highlights from TechCon 2024’s keynotes and sessions.</figcaption>
+          style="max-width:100%; height:auto; aspect-ratio:16/9; border:0;"
+          src="https://www.youtube.com/embed/-cDNA1lewEo"
+          title="TechCon 2024 Promo"
+          loading="lazy"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+        <figcaption id="promo-desc">Promo video: highlights from TechCon 2024’s keynotes and sessions. (Enable captions in the YouTube player for subtitles.)</figcaption>
       </figure>
     </section>
   </main>
 
-  <!-- Footer: include the word “Copyright” and the current year -->
+  <!-- Footer -->
   <footer>
     <p>Copyright © 2025 TechCon 2024 Conference. All rights reserved.</p>
   </footer>
