about the conference

--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -3,6 +3,106 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>TechCon 2024 — About</title>
-  <meta name="description" content="Learn more about TechCon 2024, including our mission, history, and organizing team." />
+  <title>About TechCon 2024</title>
+  <meta name="description"
+        content="Learn more about TechCon 2024, including our mission, history, and past speakers." />
+</head>
+<body>
+  <!-- Header: conference name + primary navigation -->
+  <header>
+    <h1>About TechCon 2024</h1>
+    <nav aria-label="Primary">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html" aria-current="page">About</a></li>
+        <li><a href="schedule.html">Schedule</a></li>
+        <li><a href="register.html">Register</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <!-- History article -->
+    <article id="history">
+      <h2>History</h2>
+      <p>
+        Launched in 2010, TechCon began as a small meetup for local developers and
+        engineers. Over the years, it has grown into a global technology conference
+        that welcomes thousands of participants from around the world.
+      </p>
+      <p>
+        From its first edition in a single auditorium to today’s multi-track,
+        multi-day experience, TechCon has consistently showcased cutting-edge
+        innovations and emerging trends in software, hardware, and digital products.
+      </p>
+      <img src="images/techcon-2010.jpg"
+           alt="Audience attending the first TechCon conference in 2010" />
+      <img src="images/techcon-audience.jpg"
+           alt="Large crowd listening to a keynote session at TechCon" />
+    </article>
+
+    <!-- Mission article -->
+    <article id="mission">
+      <h2>Mission</h2>
+      <p>
+        The mission of TechCon 2024 is to connect innovators, creators, and learners
+        in order to accelerate responsible technological progress. We aim to create a
+        space where students, professionals, startups, and industry leaders can
+        exchange ideas and build impactful solutions.
+      </p>
+      <p>
+        Through keynotes, hands-on workshops, and collaborative sessions, TechCon
+        promotes open knowledge-sharing, diversity in tech, and sustainable digital
+        transformation across industries.
+      </p>
+      <img src="images/innovation-icon.png"
+           alt="Icon symbolizing innovation and collaboration" />
+    </article>
+
+    <!-- Past Speakers article -->
+    <article id="past-speakers">
+      <h2>Past Speakers</h2>
+
+      <section>
+        <h3>Dr. Amina Chen – AI Researcher</h3>
+        <img src="images/amina-chen.jpg"
+             alt="Portrait of Dr. Amina Chen, AI researcher and past TechCon keynote speaker" />
+        <p>
+          Dr. Chen is a leading researcher in artificial intelligence and ethical
+          machine learning. At TechCon 2021, she delivered a keynote on building
+          transparent and fair AI systems that inspired organizations to rethink
+          how they design and deploy algorithms.
+        </p>
+      </section>
+
+      <section>
+        <h3>Jamal Rodriguez – Cloud Architect</h3>
+        <img src="images/jamal-rodriguez.jpg"
+             alt="Portrait of Jamal Rodriguez, cloud architect and TechCon speaker" />
+        <p>
+          Jamal is a principal cloud architect who has helped large enterprises move
+          securely to the cloud. In his TechCon 2022 talk, he shared practical
+          strategies for designing scalable, resilient architectures for modern
+          applications.
+        </p>
+      </section>
+
+      <section>
+        <h3>Sofia Ndiaye – Cybersecurity Specialist</h3>
+        <img src="images/sofia-ndiaye.jpg"
+             alt="Portrait of Sofia Ndiaye, cybersecurity specialist and TechCon speaker" />
+        <p>
+          Sofia focuses on defending critical infrastructure from cyber threats.
+          During TechCon 2023, she led an interactive session on building a
+          security-first culture within development teams and organizations.
+        </p>
+      </section>
+    </article>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 TechCon 2024 Conference. All rights reserved.</p>
+  </footer>
+</body>
 </html>
