--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>TechCon 2024 — Home</title>
+  <title>Home | TechCon 2024</title>
   <meta name="description" content="Official website for TechCon 2024 — schedule, speakers, registration, and contact information." />
 </head>
 <body>
@@ -25,7 +25,7 @@
       <h2 id="intro">Welcome to TechCon 2024</h2>
       <p>
         Join developers, data scientists, and tech leaders for three days of talks, workshops, and networking.
-        Explore AI, Web, Cloud, and Security tracks—all in one place.
+        Explore AI, Web, Cloud, and Security tracks, all in one place.
       </p>
 
       <figure>
