--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -17,6 +17,7 @@
         <li><a href="about.html">About</a></li>
         <li><a href="schedule.html">Schedule</a></li>
         <li><a href="register.html">Register</a></li>
+        <li><a href="contact.html" aria-current="page">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -29,13 +30,13 @@
         If you have any questions or need assistance, please reach out to us using the
         following contact details:
       </p>
+      <ul>
+        <li>
           Email:
-          <a href="mailto:contact-techcon@techcon.com">contact-techcon@techcon.com</a>
-        </p>
-        <p>Phone: +1 (555) 123-4567</p>
-        <p>Address: 123 TechCon Blvd, Innovation City, TX 75001</p>
-      </p>
-      
+          <a href="mailto:email@example.com">email@example.com</a>
+        </li>
+      </ul>
+
       <h3>Follow Us</h3>
       <ul>
         <li>
