updating the register form

--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -12,7 +12,7 @@
     <!-- Header: conference name + primary navigation -->
     <header>
         <h1>Register for TechCon 2024</h1>
-        <nav aria-label="Primary">
+        <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
