update of the contact page

--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -11,7 +11,7 @@
   <!-- Header: conference name + primary navigation -->
   <header>
     <h1>Contact Us</h1>
-    <nav aria-label="Primary">
+    <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
