--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -59,8 +59,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 TechCon 2024 Conference. All rights reserved.</p>
+    <p>Copyright © 2025 TechCon 2024 Conference. All rights reserved.</p>
   </footer>
 </body>
 </html>
-    
